feat(hackerrank): array questions

--- a/hackerrank/.vscode/settings.json
+++ b/hackerrank/.vscode/settings.json
@@ -8,4 +8,5 @@
     "html.format.enable": true,
     "autoDocstring.docstringFormat": "sphinx",
     "python.pythonPath": "/usr/local/bin/python3",
+    "code-runner.clearPreviousOutput": true,
 }
